--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
     "require": {
         "php": "^7.1.3",
         "twig/twig": "^2.4|^3.0",
-        "symfony/intl": "^4.3"
+        "symfony/intl": "^4.3|^5.0"
     },
     "require-dev": {
         "symfony/phpunit-bridge": "^4.4@dev"
