--- a/composer.json
+++ b/composer.json
@@ -16,12 +16,12 @@
         }
     ],
     "require": {
-        "php": "^7.1.3|^8.0",
+        "php": ">=7.1.3",
         "twig/twig": "^2.4|^3.0",
         "symfony/intl": "^4.3|^5.0"
     },
     "require-dev": {
-        "symfony/phpunit-bridge": "^4.4|^5.0"
+        "symfony/phpunit-bridge": "^4.4.9|^5.0.9"
     },
     "autoload": {
         "psr-4" : {
