Enhancement: Use GithubActions instead of Travis for tests

--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -9,6 +9,7 @@
          failOnWarning="true"
 >
     <php>
+        <env name="LANG" value="en_US.UTF-8" force="true" />
         <ini name="error_reporting" value="-1" />
     </php>
 
