--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
     ],
     "require": {
         "php": ">=7.1.3",
+        "ext-intl": "*",
         "twig/twig": "^2.4|^3.0",
         "symfony/intl": "^4.3|^5.0"
     },
