--- a/composer.json
+++ b/composer.json
@@ -17,10 +17,10 @@
     "require": {
         "php": ">=7.1.3",
         "twig/twig": "^2.7|^3.0",
-        "symfony/intl": "^4.4|^5.0|^6.0"
+        "symfony/intl": "^5.4|^6.0"
     },
     "require-dev": {
-        "symfony/phpunit-bridge": "^4.4.9|^5.0.9|^6.0"
+        "symfony/phpunit-bridge": "^5.4|^6.3"
     },
     "autoload": {
         "psr-4" : { "Twig\\Extra\\Intl\\" : "" },
